<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModificarTareaFragment">

    <ImageButton
        android:id="@+id/btnCerrar"
        android:layout_width="37dp"
        android:layout_height="33dp"
        android:src="@android:drawable/btn_dialog" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtNombreAct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:hint="@string/nombreAct"
            android:inputType="textPersonName"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            android:background="@drawable/input"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"/>

        <EditText
            android:id="@+id/txtDescripcion"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:gravity="start|top"
            android:hint="@string/descripcion"
            android:inputType="textMultiLine"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            android:background="@drawable/input"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"/>

        <TextView
            android:id="@+id/txtMateria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvSelectTipoT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/selectTipo"
            android:textColor="@color/text"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/RadioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbTarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbTarea"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:buttonTint="@color/white"/>

            <RadioButton
                android:id="@+id/rbProyecto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbProyecto"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:buttonTint="@color/white"/>

            <RadioButton
                android:id="@+id/rbExamen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbExamen"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:buttonTint="@color/white"/>
        </RadioGroup>

        <TextView
            android:id="@+id/tvSelectFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/fecha"
            android:textColor="@color/text"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/etDia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/dia"
                android:inputType="number"
                android:textColor="@color/text"
                android:textColorHint="@color/text"
                android:background="@drawable/input"/>

            <EditText
                android:id="@+id/etMes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/mes"
                android:inputType="number"
                android:textColor="@color/text"
                android:textColorHint="@color/text"
                android:background="@drawable/input"/>

            <EditText
                android:id="@+id/etAno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ano"
                android:inputType="number"
                android:textColor="@color/text"
                android:textColorHint="@color/text"
                android:background="@drawable/input"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnAct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update" />


    </LinearLayout>

</FrameLayout>