<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imgFondo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/inicio" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/image"
        android:scaleType="fitCenter"
        app:srcCompat="@mipmap/logo_round" />

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/Correo"
        android:textColor="#fff"
        android:textColorHint="#ccc"
        android:background="@drawable/input"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/txtContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCorreo"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/Contrasena"
        android:textColor="#fff"
        android:textColorHint="#ccc"
        android:background="@drawable/input"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/cbSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtContrasena"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="#fff"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:text="@string/sesion" />

    <Button
        android:id="@+id/btnIniciar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cbSesion"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btn_redondeado_white"
        android:onClick="ingresa"
        android:textColor="@color/black"
        android:text="@string/Iniciar" />

    <TextView
        android:id="@+id/tvCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnIniciar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="55dp"
        android:text="@string/cuenta"
        android:textColor="#fff"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnIniciar"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="42dp"
        android:layout_toEndOf="@+id/tvCuenta"
        android:background="@android:color/transparent"
        android:onClick="crea"
        android:text="@string/crearc"
        android:textColor="#fff"
        android:textSize="16sp" />


</RelativeLayout>