<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearActivity">

    <ImageView
        android:id="@+id/imgFondo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/inicio" />

    <ImageButton
        android:id="@+id/btnRegresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/regresar"
        android:onClick="Regresar"
        android:padding="10dp"
        android:tint="#FFFFFF"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <TextView
        android:id="@+id/tvCrearCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRegresar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/cc"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtMatricula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCrearCuenta"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/matricula"
        android:inputType="numberDecimal"
        android:textColor="#fff"
        android:textColorHint="#ccc" />

    <TextView
        android:id="@+id/tvSelectCarrera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMatricula"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/selectCarrera"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spnCarrera"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_below="@+id/tvSelectCarrera"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/text"
        android:textSize="16sp"
        android:background="@drawable/input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSelectCarrera" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spnCarrera"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:textColor="#fff"
        android:textColorHint="#ccc" />

    <EditText
        android:id="@+id/txtApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtNombre"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:textColorHint="#ccc"
        android:textColor="#fff"
        android:hint="@string/apellido"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtApellidos"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:textColorHint="#ccc"
        android:textColor="#fff"
        android:hint="@string/Correo"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txtContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCorreo"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/Contrasena"
        android:inputType="textPassword"
        android:textColor="#fff"
        android:textColorHint="#ccc" />

    <Button
        android:id="@+id/btnCrearCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtContrasena"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btn_redondeado_white"
        android:onClick="inicia"
        android:textColor="#000"
        android:text="@string/cc" />


</RelativeLayout>